--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section - Seção principal com chamada para ação -->
+     <!-- Hero Section - Seção principal com chamada para ação -->
     <section id="inicio" class="hero d-flex align-items-center text-center text-white">
         <div class="container">
             <h1 class="display-4 fw-bold">Especialistas em Direção Veicular</h1>
@@ -73,23 +73,23 @@
                 <!-- Membro da Equipe 1 -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
-                        <img src="https://placehold.co/150x150/FFC107/212529?text=Membro+1" alt="Foto Membro da Equipe 1" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Nome do Membro 1</h5>
+                        <img src="img/cleiton.png" alt="Foto Membro da Equipe 1" class="img-fluid rounded-circle shadow mb-3">
+                        <h5 class="fw-bold text-secondary">Cleiton Gonçalves</h5>
                         <p class="text-muted">Função do Membro 1</p>
                     </div>
                 </div>
                 <!-- Membro da Equipe 2 -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
-                        <img src="https://placehold.co/150x150/FFC107/212529?text=Membro+2" alt="Foto Membro da Equipe 2" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Nome do Membro 2</h5>
+                        <img src="img/duda.png" alt="Foto Membro da Equipe 2" class="img-fluid rounded-circle shadow mb-3">
+                        <h5 class="fw-bold text-secondary">Maria Eduarda</h5>
                         <p class="text-muted">Função do Membro 2</p>
                     </div>
                 </div>
                 <!-- Membro da Equipe 3 (exemplo, adicione mais conforme necessário) -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
-                        <img src="https://placehold.co/150x150/FFC107/212529?text=Membro+3" alt="Foto Membro da Equipe 3" class="img-fluid rounded-circle shadow mb-3">
+                        <img src="img/boneco1.png" alt="Foto Membro da Equipe 3" class="img-fluid rounded-circle shadow mb-3">
                         <h5 class="fw-bold text-secondary">Nome do Membro 3</h5>
                         <p class="text-muted">Função do Membro 3</p>
                     </div>
@@ -97,7 +97,7 @@
                 <!-- Membro da Equipe 4 (exemplo, adicione mais conforme necessário) -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
-                        <img src="https://placehold.co/150x150/FFC107/212529?text=Membro+4" alt="Foto Membro da Equipe 4" class="img-fluid rounded-circle shadow mb-3">
+                        <img src="img/boneco 2.png" alt="Foto Membro da Equipe 4" class="img-fluid rounded-circle shadow mb-3">
                         <h5 class="fw-bold text-secondary">Nome do Membro 4</h5>
                         <p class="text-muted">Função do Membro 4</p>
                     </div>
@@ -164,7 +164,47 @@
             <!-- O botão Analisar Sintomas foi removido daqui, agora é um botão flutuante -->
         </div>
     </section>
-
+    <!-- Nossa Proposta / O que oferecemos -->
+    <section id="nossa-proposta" class="py-5 bg-dark text-white">
+        <div class="container">
+            <h2 class="mb-5 text-center">Na Oficina Lutron, oferecemos:</h2>
+            <div class="row justify-content-center align-items-center">
+                <!-- Coluna para o boneco (AGORA NO LADO ESQUERDO) -->
+                <div class="col-lg-5 text-center d-flex align-items-center justify-content-center order-lg-1"> <!-- Adicionado order-lg-1 para ordenar a coluna em telas grandes -->
+                    <!-- ATENÇÃO: Verifique se 'Boneco.png' está na pasta 'img/' -->
+                    <img src="img/Boneco.png" alt="Mascote Mecânico Lutron" class="img-fluid mascote-proposta">
+                </div>
+                <!-- Coluna para o texto (AGORA NO LADO DIREITO) -->
+                <div class="col-lg-7 order-lg-2"> <!-- Adicionado order-lg-2 para ordenar a coluna em telas grandes -->
+                    <ul class="offer-list list-unstyled">
+                        <li>
+                            <i class="fas fa-check-circle text-primary me-3"></i>
+                            Diagnóstico completo do sistema de direção hidráulica: Através de equipamentos modernos e da experiência de nossos profissionais, identificamos a causa do problema com precisão.
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle text-primary me-3"></i>
+                            Serviços especializados em direção hidráulica: Reparo ou troca de bombas hidráulicas, mangueiras, correias de transmissão e outros componentes do sistema.
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle text-primary me-3"></i>
+                            Utilização de peças de qualidade: Priorizamos o uso de peças originais ou de alta qualidade para garantir o bom funcionamento do sistema e a sua segurança.
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle text-primary me-3"></i>
+                            Atendimento personalizado: Oferecemos um atendimento personalizado para cada cliente, com explicações detalhadas sobre o problema e o serviço a ser realizado.
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle text-primary me-3"></i>
+                            Preço justo e competitivo: Acreditamos que acesso à qualidade deve ser acessível, por isso oferecemos preços justos e competitivos em todos os nossos serviços.
+                        </li>
+                    </ul>
+                    <p class="text-start mt-5 lead">
+                        Não deixe problemas na direção hidráulica colocarem em risco sua segurança e conforto ao dirigir!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Depoimentos no Google Meu Negócio -->
     <section id="depoimentos" class="py-5 bg-white text-center">
         <div class="container">
@@ -187,7 +227,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="testimonial-card p-4 rounded-3 shadow-sm h-100">
                         <div class="text-warning mb-2">
-                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
+                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <h5 class="fw-bold text-secondary">Jonathan Santos</h5>
                             <p class="fst-italic mb-0">"Ótimo serviço, super indico precisando de fazer reparo da direção hidráulica ou bomba de direção. Pode procurar lutron direções tá de parabéns"</p>
@@ -242,28 +282,28 @@
                                 <i class="fas fa-map-marker-alt fa-2x text-primary me-3 mt-1"></i>
                                 <div>
                                     <h6 class="fw-bold mb-0">Endereço:</h6>
-                                    <p class="mb-0">Rua Augusto e Sousa, 56 Engenho da Rainha, Rio de Janeiro - RJ</p>
+                                    <p class="mb-0">Estrada Deputado Darcílio Ayres Raunheitti, 463 grama - Miguel Couto, Nova Iguaçu - RJ, 26065-610</p>
                                 </div>
                             </li>
                             <li class="d-flex align-items-start mb-3">
                                 <i class="fas fa-phone-alt fa-2x text-primary me-3 mt-1"></i>
                                 <div>
                                     <h6 class="fw-bold mb-0">Telefone:</h6>
-                                    <p class="mb-0">(21) 97088-4544</p>
+                                    <p class="mb-0">(21) 96434-9438</p>
                                 </div>
                             </li>
                             <li class="d-flex align-items-start mb-3">
                                 <i class="fab fa-whatsapp fa-2x text-primary me-3 mt-1"></i>
                                 <div>
                                     <h6 class="fw-bold mb-0">WhatsApp:</h6>
-                                    <p class="mb-0"><a href="https://wa.me/5521970884544" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-dark">(21) 97088-4544</a></p>
+                                    <p class="mb-0"><a href="https://wa.me/5521964349438" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-dark">(21) 96434-9438</a></p>
                                 </div>
                             </li>
                             <li class="d-flex align-items-start mb-3">
                                 <i class="fas fa-envelope fa-2x text-primary me-3 mt-1"></i>
                                 <div>
                                     <h6 class="fw-bold mb-0">Email:</h6>
-                                    <p class="mb-0"><a href="mailto:thiagocaixadedirecao@gmail.com" class="text-decoration-none text-dark">thiagocaixadedirecao@gmail.com</a></p>
+                                    <p class="mb-0"><a href="mailto:thiagocaixadedirecao@gmail.com" class="text-decoration-none text-dark">Atendimento@lutron.com</a></p>
                                 </div>
                             </li>
                             <!-- Adicionado item para Atendimento -->
@@ -325,7 +365,7 @@
                         <i class="fab fa-tiktok fa-4x text-primary mb-3"></i>
                         <h5 class="fw-bold text-secondary">TikTok</h5>
                         <p class="text-muted">Vídeos rápidos e dicas automotivas!</p>
-                        <a href="https://www.tiktok.com/@suaoficina/" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
+                        <a href="https://www.tiktok.com/@lutron.direes" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
                             <i class="fab fa-tiktok me-2"></i>Ver Perfil
                         </a>
                         <!-- Exemplo de embed de Perfil do TikTok (seria substituído pelo código real) -->
@@ -366,26 +406,100 @@
                     </form>
                 </div>
             </div>
-            
-            <a href="https://wa.me/5521964349438" class="btn btn-success btn-lg mt-4 text-center d-block mx-auto" target="_blank" rel="noopener noreferrer" aria-label="Falar com Especialista no WhatsApp" style="max-width: 300px;">
-                <i class="fab fa-whatsapp me-2"></i>WhatsApp
-            </a>
 
         </div>
+        <div class="mt-4 pt-3 border-top border-secondary text-center"> </div>
     </section>
 
-    <!-- Footer - Rodapé -->
-    <footer class="bg-dark text-white text-center py-4">
+     <!-- Footer - Rodapé -->
+    <footer class="bg-dark text-white py-4" id="main-footer">
         <div class="container">
-            <p class="mb-0">&copy; 2025 Oficina Lutron | Todos os direitos reservados</p>
-            <div class="mt-2">
-                <a href="#" class="text-white mx-2" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-white mx-2" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-white mx-2" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <div class="row justify-content-center text-start">
+                <!-- Coluna 1: Informações de Contato e Horário -->
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <h5 class="fw-bold text-primary border-bottom border-primary pb-2 mb-3">Contato</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <i class="fas fa-map-marker-alt text-primary me-2"></i>
+                             Estrada Deputado Darcílio Ayres Raunheitti, 463 grama - Miguel Couto, Nova Iguaçu - RJ, 26065-610
+                        </li>
+                        <li>
+                            <i class="fas fa-phone-alt text-primary me-2"></i>
+                            (21) 96434-9438
+                        </li>
+                        <li>
+                            <i class="fab fa-whatsapp text-primary me-2"></i>
+                            <a href="https://wa.me/5521964349438" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">(21) 96434-9438</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-envelope text-primary me-2"></i>
+                            <a href="mailto:Atendimento@lutron.com" class="text-white text-decoration-none">Atendimento@lutron.com</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-clock text-primary me-2"></i>
+                            Segunda a Sexta, das 08h às 18h.
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Coluna 2: Redes Sociais -->
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <h5 class="fw-bold text-primary border-bottom border-primary pb-2 mb-3">Redes Sociais</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <i class="fab fa-instagram text-primary me-2"></i>
+                            <a href="https://www.instagram.com/lutron.direcoes/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Instagram</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-tiktok text-primary me-2"></i>
+                            <a href="https://www.tiktok.com/@lutron.direes/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">TikTok</a>
+                        </li>
+                        <li>
+                            <i class="fab fa-facebook-f text-primary me-2"></i>
+                            <a href="https://www.facebook.com/suaoficina/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Facebook</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-store text-primary me-2"></i>
+                            <a href="LINK_DO_MERCADO_LIVRE" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Mercado Livre</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-box text-primary me-2"></i>
+                            <span class="text-white">Produtos para direção</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Coluna 3: Informações da Empresa & Créditos -->
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <h5 class="fw-bold text-primary border-bottom border-primary pb-2 mb-3">Empresa</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <i class="fas fa-building text-primary me-2"></i>
+                            <strong>Nome Completo:</strong> Oficina Lutron | Especialistas em Direção
+                        </li>
+                        <li>
+                            <i class="fas fa-id-card text-primary me-2"></i>
+                            <strong>CNPJ:</strong> 59.998.150/0001-89
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Coluna 4: Newsletter e Créditos -->
+                <div class="col-md-6 col-lg-3 mb-4">
+                    <h5 class="fw-bold text-primary border-bottom border-primary pb-2 mb-3">Newsletter</h5>
+                    <p class="text-white-50">Cadastre-se e receba promoções exclusivas!</p>
+                    <form class="d-flex footer-newsletter-form">
+                        <input type="email" class="form-control me-2" placeholder="Seu e-mail" aria-label="Seu e-mail para newsletter">
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-paper-plane"></i></button>
+                    </form>
+                    <div class="mt-4 text-white-50 small">
+                  
+                        <p>&copy; 2025 Oficina Lutron | Todos os direitos reservados</p>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
-
     <!-- Botão flutuante do WhatsApp -->
     <a href="https://wa.me/5521964349438" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco via WhatsApp">
         <i class="fab fa-whatsapp"></i>
