--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
                 <div class="col-6 col-md-3">
                     <div class="team-member">
                         <img src="img/cleiton.png" alt="Foto Membro da Equipe 1" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Cleiton Gonçalves</h5>
-                        <p class="text-muted">Função do Membro 1</p>
+                        <h5 class="fw-bold text-secondary">Cleiton Erick</h5>
+                        <p class="text-muted">Proprietário Técnico de direção eletrica e hidráulica </p>
                     </div>
                 </div>
                 <!-- Membro da Equipe 2 -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
                         <img src="img/duda.png" alt="Foto Membro da Equipe 2" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Maria Eduarda</h5>
-                        <p class="text-muted">Função do Membro 2</p>
+                        <h5 class="fw-bold text-secondary">Maria Medeiros</h5>
+                        <p class="text-muted">Gerente Administrativo</p>
                     </div>
                 </div>
                 <!-- Membro da Equipe 3 (exemplo, adicione mais conforme necessário) -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
                         <img src="img/boneco1.png" alt="Foto Membro da Equipe 3" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Nome do Membro 3</h5>
-                        <p class="text-muted">Função do Membro 3</p>
+                        <h5 class="fw-bold text-secondary">Elias</h5>
+                        <p class="text-muted">Mecânico</p>
                     </div>
                 </div>
                 <!-- Membro da Equipe 4 (exemplo, adicione mais conforme necessário) -->
                 <div class="col-6 col-md-3">
                     <div class="team-member">
                         <img src="img/boneco 2.png" alt="Foto Membro da Equipe 4" class="img-fluid rounded-circle shadow mb-3">
-                        <h5 class="fw-bold text-secondary">Nome do Membro 4</h5>
-                        <p class="text-muted">Função do Membro 4</p>
+                        <h5 class="fw-bold text-secondary">João</h5>
+                        <p class="text-muted">Montador</p>
                     </div>
                 </div>
             </div>
