--- a/links.html
+++ b/links.html
@@ -94,7 +94,7 @@
 
         <!-- Botões de Links -->
         <div class="space-y-4">
-            <a href="https://SEU_SITE_PRINCIPAL.com.br" target="_blank" rel="noopener noreferrer" class="link-button">
+            <a href="https://oficinalutron.netlify.app/" target="_blank" rel="noopener noreferrer" class="link-button">
                 <i class="fas fa-globe"></i> Visitar Nosso Site
             </a>
             <a href="https://www.tiktok.com/@lutron.direes" target="_blank" rel="noopener noreferrer" class="link-button">
