--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                 <i class="fas fa-envelope fa-2x text-primary me-3 mt-1"></i>
                                 <div>
                                     <h6 class="fw-bold mb-0">Email:</h6>
-                                    <p class="mb-0"><a href="mailto:thiagocaixadedirecao@gmail.com" class="text-decoration-none text-dark">Atendimento@lutron.com</a></p>
+                                    <p class="mb-0"><a href="mailto:lutrondirecoes@outlook.com" class="text-decoration-none text-dark">lutrondirecoes@outlook.com</a></p>
                                 </div>
                             </li>
                             <!-- Adicionado item para Atendimento -->
@@ -350,11 +350,11 @@
                         <i class="fab fa-facebook-f fa-4x text-primary mb-3"></i>
                         <h5 class="fw-bold text-secondary">Facebook</h5>
                         <p class="text-muted">Curta nossa página e fique por dentro!</p>
-                        <a href="https://www.facebook.com/suaoficina/" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
+                        <a href="https://www.facebook.com/cleitonerick.goncalves/" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
                             <i class="fab fa-facebook-f me-2"></i>Ver Perfil
                         </a>
                         <!-- Exemplo de embed de Página do Facebook (seria substituído pelo código real) -->
-                        <div class="facebook-embed-placeholder mt-3"><iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FHugoGloss%2Fvideos%2F1455932312078370%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                        <div class="facebook-embed-placeholder mt-3"><iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Freel%2F2095472494301090%2F&show_text=true&width=267&t=0" width="267" height="591" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                         </div>
                     </div>
                 </div>
@@ -365,11 +365,11 @@
                         <i class="fab fa-tiktok fa-4x text-primary mb-3"></i>
                         <h5 class="fw-bold text-secondary">TikTok</h5>
                         <p class="text-muted">Vídeos rápidos e dicas automotivas!</p>
-                        <a href="https://www.tiktok.com/@lutron.direes" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
+                        <a href="https://www.tiktok.com/@lutron.direcoes" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-sm mt-2">
                             <i class="fab fa-tiktok me-2"></i>Ver Perfil
                         </a>
                         <!-- Exemplo de embed de Perfil do TikTok (seria substituído pelo código real) -->
-                        <div class="tiktok-embed-placeholder mt-3"><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@southamericamemes/video/7503639936000658693" data-video-id="7503639936000658693" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@southamericamemes" href="https://www.tiktok.com/@southamericamemes?refer=embed">@southamericamemes</a> <a title="southamericamemes" target="_blank" href="https://www.tiktok.com/tag/southamericamemes?refer=embed">#southamericamemes</a> <a target="_blank" title="♬ som original  - SAM" href="https://www.tiktok.com/music/som-original-SAM-7503639956470844215?refer=embed">♬ som original  - SAM</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                        <div class="tiktok-embed-placeholder mt-3"><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@lutron.direcoes/video/7537750402456980741" data-video-id="7537750402456980741" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@lutron.direcoes" href="https://www.tiktok.com/@lutron.direcoes?refer=embed">@lutron.direcoes</a> Fiat uno passando por um diagnóstico da coluna Elétrica. Mantenha a direção do seu carro segura! Precisando de manutenção procura a gente. LUTRON DIREÇÕES  📲 zap: (21)964349438&#47; (21)995221198 <a title="fy" target="_blank" href="https://www.tiktok.com/tag/fy?refer=embed">#fy</a> <a title="foryou" target="_blank" href="https://www.tiktok.com/tag/foryou?refer=embed">#foryou</a> <a title="mecanica" target="_blank" href="https://www.tiktok.com/tag/mecanica?refer=embed">#mecanica</a> <a title="style" target="_blank" href="https://www.tiktok.com/tag/style?refer=embed">#style</a> <a title="directions" target="_blank" href="https://www.tiktok.com/tag/directions?refer=embed">#directions</a> <a target="_blank" title="♬ Make It Better (Instrumental) - Anderson .Paak" href="https://www.tiktok.com/music/Make-It-Better-Instrumental-6792136995872180226?refer=embed">♬ Make It Better (Instrumental) - Anderson .Paak</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
                         </div>
                     </div>
                 </div>
@@ -392,7 +392,7 @@
                             <input type="text" class="form-control" id="contactName" placeholder="Seu nome" required aria-label="Seu nome" />
                         </div>
                         <div class="mb-3">
-                            <input type="email" class="form-control" id="contactEmail" placeholder="Seu e-mail" required aria-label="Seu e-mail" />
+                            <input type="email" class="form-control" id="contactEmail" placeholder="Seu e-mail" required aria-label="lutrondirecoes@outlook.com" />
                         </div>
                         <div class="mb-3">
                             <input type="tel" class="form-control" id="contactPhone" placeholder="Seu telefone (DDD+Número)" aria-label="Seu telefone" />
@@ -433,7 +433,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope text-primary me-2"></i>
-                            <a href="mailto:Atendimento@lutron.com" class="text-white text-decoration-none">Atendimento@lutron.com</a>
+                            <a href="mailto:Atendimento@lutron.com" class="text-white text-decoration-none">lutrondirecoes@outlook.com</a>
                         </li>
                         <li>
                             <i class="fas fa-clock text-primary me-2"></i>
@@ -452,20 +452,17 @@
                         </li>
                         <li>
                             <i class="fab fa-tiktok text-primary me-2"></i>
-                            <a href="https://www.tiktok.com/@lutron.direes/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">TikTok</a>
+                            <a href="https://www.tiktok.com/@lutron.direcoes/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">TikTok</a>
                         </li>
                         <li>
                             <i class="fab fa-facebook-f text-primary me-2"></i>
-                            <a href="https://www.facebook.com/suaoficina/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Facebook</a>
+                            <a href="https://www.facebook.com/cleitonerick.goncalves/" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Facebook</a>
                         </li>
                         <li>
                             <i class="fas fa-store text-primary me-2"></i>
-                            <a href="LINK_DO_MERCADO_LIVRE" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Mercado Livre</a>
+                            <a href="https://produto.mercadolivre.com.br/MLB-5561477602-caixa-direco-hidraulica-remanufaturada-fiat-trw-_JM" target="_blank" rel="noopener noreferrer" class="text-white text-decoration-none">Mercado Livre</a>
                         </li>
-                        <li>
-                            <i class="fas fa-box text-primary me-2"></i>
-                            <span class="text-white">Produtos para direção</span>
-                        </li>
+                        
                     </ul>
                 </div>
 
