--- a/links.html
+++ b/links.html
@@ -97,10 +97,10 @@
             <a href="https://oficinalutron.netlify.app/" target="_blank" rel="noopener noreferrer" class="link-button">
                 <i class="fas fa-globe"></i> Visitar Nosso Site
             </a>
-            <a href="https://www.tiktok.com/@lutron.direes" target="_blank" rel="noopener noreferrer" class="link-button">
+            <a href="https://www.tiktok.com/@lutron.direcoes" target="_blank" rel="noopener noreferrer" class="link-button">
                 <i class="fab fa-tiktok"></i> Nosso TikTok
             </a>
-            <a href="https://lista.mercadolivre.com.br/SEU_MERCADO_LIVRE" target="_blank" rel="noopener noreferrer" class="link-button">
+            <a href="https://produto.mercadolivre.com.br/MLB-5561477602-caixa-direco-hidraulica-remanufaturada-fiat-trw-_JM" target="_blank" rel="noopener noreferrer" class="link-button">
                 <i class="fas fa-store"></i> Produtos no Mercado Livre
             </a>
             <a href="https://wa.me/5521964349438?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20os%20serviços%20da%20Oficina%20Lutron!" target="_blank" rel="noopener noreferrer" class="link-button">
@@ -110,10 +110,10 @@
 
         <!-- Ícones de Redes Sociais (se houver mais, adicione aqui) -->
         <div class="social-icons-footer mt-8">
-            <a href="https://www.instagram.com/SEU_INSTAGRAM/" target="_blank" rel="noopener noreferrer" aria-label="Instagram da Lutron">
+            <a href="https://www.instagram.com/lutron.direcoes/" target="_blank" rel="noopener noreferrer" aria-label="Instagram da Lutron">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.facebook.com/SEU_FACEBOOK/" target="_blank" rel="noopener noreferrer" aria-label="Facebook da Lutron">
+            <a href="https://www.facebook.com/cleitonerick.goncalves/" target="_blank" rel="noopener noreferrer" aria-label="Facebook da Lutron">
                 <i class="fab fa-facebook-f"></i>
             </a>
             <!-- Adicione outros ícones sociais aqui se necessário -->
